it can now generate mazes on demand, even if the chosen name is already taken. It also exports to json and seeds.